--- a/stucit/template_new.html
+++ b/stucit/template_new.html
@@ -6988,43 +6988,43 @@
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label text-navy">用例名称:</label>
                                     <div class="col-sm-5">
-                                        <span class="form-control" id="testName">{{details[0].name}}</span>
+                                        <span class="form-control" id="testName"></span>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label text-navy">用例总数:</label>
                                     <div class="col-sm-5">
-                                        <span class="form-control" id="testAll">{{details[0].stat.total}}</span>
+                                        <span class="form-control" id="testAll"></span>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label text-navy">用例通过:</label>
                                     <div class="col-sm-5">
-                                        <span class="form-control" id="testPass">{{details[0].stat.successes}}</span>
+                                        <span class="form-control" id="testPass"></span>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label text-danger">用例失败:</label>
                                     <div class="col-sm-5">
-                                        <span class="form-control text-danger" id="testFail">{{details[0].stat.errors}}</span>
+                                        <span class="form-control text-danger" id="testFail"></span>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label text-warning">用例跳过:</label>
                                     <div class="col-sm-5">
-                                        <span class="form-control text-warning" id="testSkip">{{details[0].stat.skipped}}</span>
+                                        <span class="form-control text-warning" id="testSkip"></span>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label text-navy">开始时间:</label>
                                     <div class="col-sm-5">
-                                        <span class="form-control" id="beginTime">{{details[0].time.start_at}}</span>
+                                        <span class="form-control" id="beginTime"></span>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label text-navy">运行时间:</label>
                                     <div class="col-sm-5">
-                                        <span class="form-control" id="totalTime">{{details[0].time.duration}}</span>
+                                        <span class="form-control" id="totalTime"></span>
                                     </div>
                                 </div>
                             </form>
@@ -7066,10 +7066,13 @@
                         </select>
                         <div style="float: right">
                             <label class="form-control">
-                                <span class="text-navy">用例数: {{details[0].stat.total}}</span><span> | </span>
-                                <span style="color: green">成功: {{details[0].stat.successes}} </span><span> | </span>
-                                <span class="text-danger">失败: {{details[0].stat.errors}}</span><span> | </span>
-                                <span class="text-warning">跳过: {{details[0].stat.skipped}}</span>
+                                <span class="text-navy">用例数: </span><span class="text-navy b-r"
+                                                                          id="filterAll"></span><span> | </span>
+                                <span style="color: green">成功: </span><span style="color: green"
+                                                                            id="filterOk"></span><span> | </span>
+                                <span class="text-danger">失败: </span><span class="text-danger"
+                                                                           id="filterFail"></span><span> | </span>
+                                <span class="text-warning">跳过: </span><span class="text-warning" id="filterSkip"></span>
                             </label>
                         </div>
                     </div>
@@ -7139,21 +7142,9 @@
     }
 </script>
 <script type="text/javascript">
-    var stat={{details[0].stat}};
-    var time={{details[0].time}};
-    var report_name={{details[0].name}}
     {#    数据太乱 后台入库时处理#}
-    var resultData = {
-        "testPass": stat.successes,
-        "testAll": stat.total,
-        "testFail": stat.errors,
-        "testSkip": stat.skipped,
-        "beginTime": time.start_at,
-        "totalTime": time.duration,
-        "testName": report_name,
-        // 存入数据库时替换
-        "testResult": 用例详情
-    };
+    var report_name=report_name_replacement;
+    var resultData = resulData_replacement;
 
     function clickRow(obj) {
         $("#detailBody").children("tr").attr("style", "font-family: Consolas");
